tests/ui/scalar_types_sqlite/fail/unknown_type_requires_explicit_override.rs
use drizzle::sqlite::prelude::*;

struct Opaque;

#[SQLiteTable]
struct User {
    id: i32,
    payload: Opaque,
}

fn main() {}
